better better experience

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
+transition:opacity 4s;
 }
 .loading .tt{
     
